// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupCell should not render hidden prop is given 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  display: grid;
  position: relative;
  opacity: 0;
  width: 0;
  height: 0;
}

<div>
  <div
    class="c0"
    hidden=""
  >
    <span
      class="c1"
    >
      Dummy
    </span>
  </div>
</div>
`;

exports[`GroupCell should render GroupCellTitle properly 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  margin: 0;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  position: relative;
  text-align: center;
  padding: 0.9rem 1.6rem 1rem;
  grid-column: -1/1;
  text-overflow: initial;
  overflow: auto;
  white-space: normal;
}

.c0::after {
  content: '';
  position: absolute;
  pointer-events: none;
  background-color: #C7D0D8;
  height: 1px;
  width: calc(100% - 3.2rem);
  left: 50%;
  bottom: 0;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

<div>
  <span
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy
    </span>
  </span>
</div>
`;

exports[`GroupCell should render properly 1`] = `
.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
}

.c0 {
  display: grid;
  position: relative;
  opacity: 1;
  width: 100%;
  height: 100%;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
    >
      Dummy
    </span>
  </div>
</div>
`;
